fix alisa problem | dev spacing

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -8,6 +8,7 @@
     display: flex;
 
     @include tablet {
+        height: 90vh;
         @include tablet-padding;
         flex-direction: row-reverse;
         justify-content: space-between;
